# Pyneapple

./: .gitignore  .gitmodules  CHANGELOG.md  DeltaNiere_01_Delta026_sl3.nii  Delta_00_026_s3_mc.csv  Delta_00_026_s3_mc.xlsx  Delta_00_046_s3_mc.csv  Delta_00_046_s3_mc.xlsx  Delta_00_066_s3_mc.csv  Delta_00_066_s3_mc.xlsx  Delta_00_086_s3_mc.csv  Delta_00_086_s3_mc.xlsx  Delta_00_106_s3_mc.xlsx  LICENSE  MANIFEST.in  NNLSDynamicsViewer.py  PineappleUI.py  PyNeapple_UI.py  PyNeapple_multi_script.py  PyNeapple_results.xlsx  PyNeapple_results_NNLS.xlsx  PyNeapple_script.py  PyneappleScript.py  PyneappleUI.py  README.md  TODO.md  _fncs.py  _utils.py  allDeltaAllSubjects.xlsx  all_Delta_01_.xlsx  all_Delta_02_.xlsx  all_Delta_03_.xlsx  all_Delta_04_.xlsx  all_Delta_05_.xlsx  all_Delta_06_.xlsx  all_Delta_07_.xlsx  all_Delta_08_.xlsx  all_Delta_09_.xlsx  all_Delta_10_.xlsx  all_Delta_12_.xlsx  (+30 more)
.github/: copilot-instructions.md  pyneapple_fitter_plugin.md  pyneapple_solver_plugin.md
.github/agents/: review.md
.github/commands/: test.md
.github/scripts/: link-dir.ps1
UI/: NNLSDynApp.ui  main.py  ui_NNLSDynApp.py
data/: 01_img_results_NNLS.xlsx  kid.bval  kid_img_NNLS_results.xlsx  test9AV_masktest.nii  test9AVmask.nii  test_img_176_176_NNLS_AUC_results_top_mask.xlsx  test_img_176_176_NNLS_results.xlsx  test_img_176_176_multiExp_results.xlsx  test_mask_bottom.nii  test_mask_m.nii  test_mask_top.nii  test_mask_xs.nii  test_params.json  test_params_nnls.json
data/MATLAB CV test/: results NNLS reg0 AUC.txt  results NNLS reg0.txt
data/PyNeapple CV test/: test_img_176_176_NNLS_results_CV_top_mask.xlsx
data/results/: PyNeapple_results_NNLS.xlsx  PyNeapple_results_multiExp.xlsx  PyNeapple_results_test.xlsx  multiExp_results.xlsx  result.xlsx
data/testing/: .RData  .Rhistory  PyNeapple_test_results.xlsx  evaluate_results.R  evaluated_results.xlsx  evaluated_results_P11.xlsx  test_img_176_176_NNLS_results_CV_top_mask.xlsx  test_img_176_176_NNLS_results_bottom_reg_2.xlsx  test_img_176_176_multiExp_results_bottom.xlsx  test_img_176_176_multiExp_results_top.xlsx  test_input.xlsx  ~$PyNeapple_test_results.xlsx
docs/: DataExport.md  DocsStyleGuide.md  FitExamples.md  FitModels.md  Fitting.md  ModelClass.md  NamingConvention.md  Parameters.md  ParametersFile.md  ParametersToml.md  StyleGuide.md  TestingGuidelines.md  index.md
docs/concepts/: architecture.md  models.md
docs/guide/: cli.md  configuration.md  ideal-fitting.md  python-api.md  quickstart.md  segmented-fitting.md
docs/plugins/: gpu-acceleration.md
examples/: ideal_example.py  ivim_fitdata_script.py  nnls_example.py  nnls_fitdata_script.py  pixelwise_example.py  segmented_example.py  toml_params_example.py
examples/configs/: biexp_segmented.toml  monoexp_pixelwise.toml  monoexp_segmentionwise.toml  nnls_example.toml
examples/parameters/: ideal_biexp.toml  params_biexp.toml  params_biexp_s0.toml  params_biexp_t1.toml  params_biexp_t1_steam.toml  params_nnls.toml  params_triexp.json  params_triexp_ideal.json  params_triexp_reduced.toml  segmentationwise_biexp.toml
fitting/: NNLSreg.py  findpeaksNNLS.py
fromMedia/: NNLSreg.py  findpeaksNNLS.py
pyneapple/: PyNeapple_UI.py  PyNeapple_multi_script.py
pyneapple/fit/: __init__.py  fit.py  model.py  parameters.py
pyneapple/ui/: __init__.py  eventfilter.py
pyneapple/utils/: appdata.py  exceptions.py  nifti.py  plotting.py
resources/MultiExp_Signal_Map_Generator/: MultiExp_Signal_Map_Generator.m  createSignal.m  noiseSignal.m  write3DMatrixToTxt.m
resources/fitting/: DecayAna.cpp  NNLSregCV.py  default_params_IDEAL_bi.json  default_params_IVIM.json  default_params_IVIM_bi.json  default_params_IVIM_mono.json  default_params_IVIM_tri.json  default_params_NNLS.json  default_params_NNLSreg.json  default_params_NNLSregCV.json  default_params_ideal.json  default_params_ideal_bi.json  default_params_ideal_test.json  default_params_ideal_tri.json  findpeaksNNLS.py  params_kidney_ideal.json  params_prostate_ideal.json  params_prostate_ideal_hjw.json  params_prostate_ivim.json
src/: PyNeapple_UI.py  PyNeapple_multi_script.py  __init__.py  appdata.py  multithreading.py  plotting.py  save.py  saving.py  testing.py  utils.py
src/fit/: IDEAL.py  NNLS_reg_CV.py  __init__.py  fit.py  ideal.py  model.py  parameters.py
src/nifti/: __init__.py  nifti.py  nifti_seg.py  tools.py
src/pygpufit/: README.md  pyproject.toml
src/pygpufit/src/pygpufit/: gpufit.py  version.py
src/pyneapple/: __init__.py  pyneapple_multi_script.py  result.py
src/pyneapple_ui/: appdata.py  canvas_image.py  canvas_plot.py  dlg_about.py  dlg_fitting.py  dlg_prompts.py  menu_edit.py  menu_file.py  menu_fitting.py  menu_help.py  menu_view.py  (+2 more)
test/: conftest.py  pytest.ini  test_IVIM_model.py  test_bvalues.bval  test_diffusion_tool.py  test_ideal.json  test_ideal_fitting.py  test_ideal_parmeters.py  test_ivim_fitting.py  test_ivim_parameters.py  test_ivim_pixel_fit.nii  test_multi_exp_fitting.py  test_multi_exp_model.py  test_multiexp.py  test_multithreading.py  test_nnls.py  test_nnls_fitting.py  test_nnls_parameters.py  test_parameters.py  test_params.json  test_results.py  test_segmented_fitting.py  test_ui.py  test_utils.py
testing/: test_ideal_fitting.py  test_nnls.py
tests/: _files.py  _parameters.py  conftest.py  pytest.ini  test_boundaries.py  test_cli_main.py  test_cli_pixelwise.py  test_cli_segmented_ideal.py  test_fitter_base.py  test_fitter_ideal.py  test_fitter_pixelwise.py  test_fitter_segmentationwise.py  test_fitter_segmented.py  test_hdf5.py  test_ideal_fitting.py  test_ideal_parameters.py  test_ideal_parmeters.py  test_io.py  test_io_export.py  test_io_hdf5.py  test_io_plugin_discovery.py  test_ivim_fitting.py  test_ivim_model.py  test_ivim_model_fixed_args.py  test_ivim_parameters.py  test_ivim_results.py  test_json_params.py  test_logger.py  test_model_functions.py  test_models.py  test_nifti.py  test_nnls_fitting.py  test_nnls_parameters.py  test_nnls_results.py  test_parameters.py  test_pygpufit.py  test_pygpufit_dll.py  test_result.py  test_result_dict.py  test_results.py  (+10 more)
(+238 files in other folders)
