[project]
name = "pyneapple"
version = "1.7.0"
description = "Pyneapple is an advanced tool for analysing multi-exponential signal data in MR DWI images."
authors = [
    { name = "Thomas Thiel", email = "thomas.thiel@hhu.de" },
    { name = "Jonas Jasse", email = "jonas.jasse@hhu.de" },
]
maintainers = [{ name = "Thomas Thiel", email = "thomas.thiel@hhu.de" }]
readme = "README.md"
license = { text = "GPL-3.0-or-later" }
requires-python = ">=3.9,<3.14"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Operating System :: Microsoft :: Windows :: Windows 11",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = [
    "pathlib>=1.0.1",
    "numpy>=2.1.1; python_version>='3.10'",
    "numpy>=1.23.0,<2.0; python_version=='3.9'",
    "matplotlib>=3.7.0",
    "scipy>=1.10.1",
    "opencv-python>=4.8.0.76",
    "pandas>=2.1.3",
    "openpyxl>=3.1.2",
    "tqdm>=4.66.2",
    "radimgarray",
    "pygpufit",
    "loguru>=0.7.3",
    "tomli>=2.0.1; python_version<'3.11'",
    "tomli-w>=1.0.0; python_version<'3.11'",
    "tomlkit>=0.12.0; python_version>='3.11'",
    "h5py>=3.8.0,<3.10; python_version=='3.9'",
    "h5py>=3.10.0; python_version>='3.10'",
    "sparse>=0.14.0,<0.17; python_version=='3.9'",
    "sparse>=0.17.0; python_version>='3.10'",
    "joblib>=1.4.2",
]

[project.urls]
Homepage = "https://github.com/darksim33/Pyneapple/"
Repository = "https://github.com/darksim33/Pyneapple/"

[dependency-groups]
dev = [
    "black>=24.3.0",
    "pytest>=8.1.1",
    "pytest-order>=1.2.1",
    "pytest-mock>=3.14.1",
    "pytest-cov>=6.2.1",
    "tox>=4.21.2",
]

[tool.uv.sources]
radimgarray = { path = "src/radimgarray", editable = true }
pygpufit = { workspace = true }

[tool.uv.workspace]
members = ["src/pygpufit"]

[tool.pytest.ini_options]
markers = [
    "slow: slow tests",
    "gpu: gpufit related tests",
    "ideal: ideal fitting tests",
    "integration: integration tests with external libraries"
]

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py39, py310, py311, py312

[testenv]
deps =
    pytest
    openpyxl
skip_install = false
;extras =
;    dev
;    ui
commands =
    pytest tests

[testenv:py39]
basepython = /home/darksim/.pyenv/versions/3.9.20/bin/python
[testenv:py310]
basepython = /home/darksim/.pyenv/versions/3.10.15/bin/python
[testenv:py311]
basepython = /home/darksim/.pyenv/versions/3.11.7/bin/python
[testenv:py312]
basepython = /home/darksim/.pyenv/versions/3.12.7/bin/python
"""

[tool.pyright]
venvPath = ""
venv = ".venv"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pyneapple"]