[project]
name = "pyneapple"
version = "1.7.0"
description = "Pyneapple is an advanced tool for analysing multi-exponential signal data in MR DWI images."
authors = [
    { name = "Thomas Thiel", email = "thomas.thiel@hhu.de" },
]
maintainers = [{ name = "Thomas Thiel", email = "thomas.thiel@hhu.de" }]
readme = "README.md"
license = { text = "GPL-3.0-or-later" }
requires-python = ">=3.9,<3.14"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Operating System :: Microsoft :: Windows :: Windows 11",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = [
    "h5py>=3.10.0",
    "joblib>=1.5.3",
    "loguru>=0.7.3",
    "nibabel>=5.4.0",
    "numpy>=2.4.2",
    "opencv-python>=4.13.0.92",
    "pathlib>=1.0.1",
    "scipy>=1.17.1",
    "tqdm>=4.67.3",
]

[project.urls]
Homepage = "https://github.com/darksim33/Pyneapple/"
Repository = "https://github.com/darksim33/Pyneapple/"

[dependency-groups]
dev = [    
    "black>=24.3.0",
    "pytest>=8.1.1",
    "pytest-order>=1.2.1",
    "pytest-mock>=3.14.1",
    "pytest-cov>=6.2.1",
    "tox>=4.21.2",
    "ruff>=0.15.4",
]

[tool.uv.sources]
pygpufit = { workspace = true }

[tool.uv.workspace]
members = ["src/pygpufit"]

[project.scripts]
pyneapple-pixelwise = "pyneapple.cli.pixelwise:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--cov=pyneapple",
    "--cov-report=html",
    "--cov-report=term-missing",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
    "unit: marks tests as unit tests (deselect with '-m \"not unit\"')",
]

[tool.ruff]
line-length = 88
target-version = "py312"
lint.select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "SIM"]
lint.ignore = ["E501"]  # Line length handled by black
lint.per-file-ignores."tests/**" = ["N806","N803"]
lint.per-file-ignores."pyneapple/models/**" = ["N806","N803"]
lint.per-file-ignores."pyneapple/model_functions/**" = ["N806","N803"]
lint.per-file-ignores."pyneapple/solvers/**" = ["N806","N803"]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.pyright]
venvPath = ""
venv = ".venv"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pyneapple"]